Fix overflowing wikitables

--- a/css/general.less
+++ b/css/general.less
@@ -56,3 +56,8 @@ code {
 .mw-ui-container {
     overflow: hidden;
 }
+
+.wikitable
+{
+    overflow: auto;
+}
